# libnvim-test

./: .gitmodules  CMakeLists.txt  Makefile
cmake/: IHateCmake.cmake
src/: gui.c  gui.h  libnvim.c  libnvim.h  main.c  main.cpp  renderer-interface.cpp  renderer-interface.h  renderer.cpp  renderer.hpp  ui.c  ui.h  ui_to_renderer.h
